--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "inngest:dev": "inngest-cli dev"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-label": "^2.1.7",
@@ -18,6 +19,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "ai": "^5.0.75",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
