--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "inngest:dev": "inngest-cli dev"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.44",
     "@ai-sdk/google": "^2.0.23",
+    "@ai-sdk/openai": "^2.0.65",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/realtime": "^0.4.4",
     "@paralleldrive/cuid2": "^3.0.4",
